2008-07-01  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Insert breakpoints using the global thread group.

2008-06-26  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Server.Mdb.mdp, Server.cs, Makefile: Enable unix
	  channel support.

2008-06-26  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Allow setting the active thread. Implemented
	  GetThreads and GetProcesses.
	* Util.cs, BacktraceWrapper.cs: Fix warnings.

2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Implemented detach. Send all events to the client
	  asynchronously, to avoid deadlocks. Report debug output to the
	  client.
	* Server.cs: Implemented detach.

2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs, Util.cs, BacktraceWrapper.cs,
	  Mono.Debugging.Server.Mdb.mdp: Implemented support for attach to
	  process, disassemble.

2008-06-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Server.Mdb.mdp: Updated.

2008-05-27  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs, BacktraceWrapper.cs: Track api changes. Properly
	  redirect debugger output. Implemented support for adding
	  breakpoints while the target process is running, it seems to kinda
	  work.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Server.Mdb.mdp: Updated project.

2008-05-16  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs, Util.cs, BacktraceWrapper.cs,
	  Mono.Debugging.Server.Mdb.mdp, IExpressionValueSource.cs, Makefile:
	  Implemented query of variable and field data.

2008-05-14  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs, AssemblyInfo.cs, Util.cs, BacktraceWrapper.cs,
	  Mono.Debugging.Server.Mdb.mdp, ChangeLog, Server.cs, Makefile:
	  Initial import.

2008-04-28  Ankit Jain  <jankit@novell.com>

	* Initial import.

